--- a/css/head.css
+++ b/css/head.css
@@ -13,10 +13,22 @@
     font-size: 0.492307rem;
     padding-right: 0.461538rem;
 }
-.am-icon-angle-down{
-    color: #0498fa;
-    margin-left: 0.307692rem;
+.mui-icon-arrowdown{
+    color:#0f99f4 ;
 }
-.am-icon-pencil-square-o{
+#header .mui-icon-compose{
     float: right;
+    font-size: 0.848148rem;
+    position: absolute;
+    right: 0.407407rem;
+    top: 0.277777rem;
+}
+.footer{
+    height: 1.453703rem;
+}
+.footer .mui-icon{
+    font-size: 0.759259rem;
+}
+.footer .mui-tab-label{
+    font-size: 0.222222rem;
 }
