--- a/css/xx.css
+++ b/css/xx.css
@@ -69,7 +69,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 7.824074rem;
+    width: 8.824074rem;
     border-bottom: 0.018518rem solid #ebebeb;
     height: 1.759259rem;
 }
@@ -122,4 +122,15 @@
 }
 .li_btm{
     margin-bottom: 1.45rem;
+}
+.haoyou_guanzu{
+    display: inline-block;
+    width: 2.111111rem;
+    height: 0.879629rem;
+    color: #0496fb;
+    border: 0.018518rem solid #0496fb;
+    border-radius: 10%;
+    text-align: center;
+    line-height: 0.879629rem;
+    font-size: 0.333333rem;
 }
