--- a/css/xx.css
+++ b/css/xx.css
@@ -10,6 +10,9 @@
     box-shadow: 0.027777rem 0.027777rem 0.027777rem 0.027777rem rgba(0,0,0,.5);
     display: none;
 }
+#header .mui-icon-plusempty{
+    top:0;
+}
 .pop::before{
     content: '';
     width: 0;
