--- a/css/shezhi.css
+++ b/css/shezhi.css
@@ -18,7 +18,7 @@
     margin: 0;
 }
 .sz_ul li{
-    width: 9.166666rem;
+    width: 95%;
     height: 1.388888rem;
     display: flex;
     justify-content: space-between;
