--- a/css/xx.css
+++ b/css/xx.css
@@ -1,10 +1,10 @@
 .pop{
-    height: 2.5rem;
+    min-height: 2.5rem;
     width: 2rem;
-    position: relative;
+    position: absolute;
     z-index: 3;
-    left: 40%;
-    top: -0.277777rem;
+    left: -1.8rem;
+    top: 0;
     background: #fff;
     border-radius: 10%;
     box-shadow: 0.027777rem 0.027777rem 0.027777rem 0.027777rem rgba(0,0,0,.5);
